--- a/notenportal-frontend/package.json
+++ b/notenportal-frontend/package.json
@@ -17,6 +17,7 @@
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
     "@angular/material": "^15.2.9",
+    "@angular/material-moment-adapter": "^15.0.3",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
@@ -24,7 +25,8 @@
     "angular-oauth2-oidc": "^15.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.8",
@@ -34,6 +36,7 @@
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
+    "jasmine-auto-spies": "^6.9.9",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
